# adizzle

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE
cmake/: compile-options.cmake  install-config.cmake  install-rules.cmake  options.cmake
include/adizzle/: adizzle.hpp  assert.hpp  cast.hpp  concepts.hpp  defs.hpp  float.hpp  literals.hpp  math.hpp  string.hpp
src/: adizzle.cpp
tests/: CMakeLists.txt
tests/src/: adizzle_test.cpp  cast_test.cpp  float_test.cpp  math_test.cpp  string_test.cpp
